--- a/mhw3.html
+++ b/mhw3.html
@@ -100,7 +100,7 @@
         </div>
 
         <div class="rightfc">
-            <a class="celleintestazione"> EUR</a>
+            <a id= "valuta" class="celleintestazione"> </a>
             <a id="login" class="black">Accedi</a>
         </div>
 
